# Rust-gRPC

./: .gitignore  README.md
client/: Cargo.toml  build.rs
client/src/: main.rs
protos/: offer.proto  product.proto  subscribe.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
